[gd_scene load_steps=29 format=2]

[ext_resource path="res://Sprites/joeysprite.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]

[sub_resource type="Animation" id=37]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=38]
resource_name = "down"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=42]
resource_name = "idle down"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=43]
resource_name = "idle left"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=44]
resource_name = "idle right"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=45]
resource_name = "idle up"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=39]
resource_name = "left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=41]
resource_name = "right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=40]
resource_name = "up"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="AnimationNodeAnimation" id=46]
animation = "idle left"

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "idle down"

[sub_resource type="AnimationNodeAnimation" id=48]
animation = "idle right"

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "idle up"

[sub_resource type="AnimationNodeBlendSpace2D" id=50]
blend_point_0/node = SubResource( 46 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 47 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 48 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 49 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=53]
animation = "left"

[sub_resource type="AnimationNodeAnimation" id=55]
animation = "right"

[sub_resource type="AnimationNodeAnimation" id=56]
animation = "up"

[sub_resource type="AnimationNodeAnimation" id=60]
animation = "down"

[sub_resource type="AnimationNodeAnimation" id=61]
animation = "left"

[sub_resource type="AnimationNodeBlendSpace2D" id=57]
blend_point_0/node = SubResource( 53 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 55 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 56 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 60 )
blend_point_3/pos = Vector2( 0, 1.1 )
blend_point_4/node = SubResource( 61 )
blend_point_4/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachine" id=51]
states/Idle/node = SubResource( 50 )
states/Idle/position = Vector2( 612.333, 70.9506 )
states/walk/node = SubResource( 57 )
states/walk/position = Vector2( 773.667, 69.7709 )
transitions = [ "Idle", "walk", SubResource( 58 ), "walk", "Idle", SubResource( 59 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=52]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 7, 2.25 )

[sub_resource type="CircleShape2D" id=36]
radius = 76.0592

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 37 )
anims/down = SubResource( 38 )
"anims/idle down" = SubResource( 42 )
"anims/idle left" = SubResource( 43 )
"anims/idle right" = SubResource( 44 )
"anims/idle up" = SubResource( 45 )
anims/left = SubResource( 39 )
anims/right = SubResource( 41 )
anims/up = SubResource( 40 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 51 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 52 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/walk/blend_position = Vector2( 0.00291371, 1.09682 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 55 )
scale = Vector2( 4, 4 )
shape = SubResource( 18 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="interact_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="interact_area"]
light_mask = 32
shape = SubResource( 36 )
disabled = true

[connection signal="area_entered" from="interact_area" to="." method="_on_interact_area_area_entered"]
[connection signal="body_entered" from="interact_area" to="." method="_on_interact_area_body_entered"]
